@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: clientconf.c,v 1.17 2006/07/25 19:36:48 martinea Exp $
+ * $Id: clientconf.c,v 1.17.2.1 2006/11/01 15:31:06 martinea Exp $
  *
  * read configuration file
  */
@@ -40,6 +40,10 @@
 #include "util.h"
 #include "clientconf.h"
 #include "clock.h"
+
+#ifndef AMANDATES_FILE
+#define AMANDATES_FILE "/etc/amandates"
+#endif
 
 /* configuration parameters */
 static char *cln_config_dir = NULL;
@@ -295,7 +299,7 @@ init_defaults(void)
 #else
     conf_init_string(&client_conf[CLN_GNUTAR_LIST_DIR], NULL);
 #endif
-    conf_init_string(&client_conf[CLN_AMANDATES], "/etc/amandates");
+    conf_init_string(&client_conf[CLN_AMANDATES], AMANDATES_FILE);
     /* defaults for internal variables */
 
     conf_line_num = got_parserror = 0;
